[gd_scene load_steps=8 format=2]

[ext_resource path="res://Chefes/slime.png" type="Texture" id=1]
[ext_resource path="res://Chefes/Slime.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 8.73413

[sub_resource type="CircleShape2D" id=2]
radius = 6.12947

[sub_resource type="CircleShape2D" id=3]
radius = 6.14737

[sub_resource type="CircleShape2D" id=4]
radius = 5.77649

[sub_resource type="CircleShape2D" id=5]
radius = 6.2682

[node name="Slime" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="cima" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cima"]
position = Vector2( -0.0992126, -10.9134 )
shape = SubResource( 2 )

[node name="baixo" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="baixo"]
position = Vector2( 0.0992126, 11.0126 )
shape = SubResource( 3 )

[node name="direita" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="direita"]
position = Vector2( 11.9055, 0.198425 )
shape = SubResource( 4 )

[node name="esquerda" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="esquerda"]
position = Vector2( -11.3102, -0.198425 )
shape = SubResource( 5 )

[node name="RastroTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true
[connection signal="body_entered" from="cima" to="." method="_on_cima_body_entered"]
[connection signal="body_entered" from="baixo" to="." method="_on_baixo_body_entered"]
[connection signal="body_entered" from="direita" to="." method="_on_direita_body_entered"]
[connection signal="body_entered" from="esquerda" to="." method="_on_esquerda_body_entered"]
[connection signal="timeout" from="RastroTimer" to="." method="_on_RastroTimer_timeout"]
